...
                                </constraints>
                                <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="15"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="TEST">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="15"/>
                                <state key="normal" title="Join">
                                    <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
        <scene sceneID="yHx-UH-R7c">
            <objects>
                <viewController storyboardIdentifier="CellView" title="Cell" id="nah-hC-XFm" customClass="CellCollectionViewController" customModule="GanaanYouth" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="a0k-t4-PEB">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                    </view>
                    <navigationItem key="navigationItem" id="EbE-vO-EHB">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="line.horizontal.3" catalog="system" id="b12-bB-VO8">
                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        </barButtonItem>
...
        <scene sceneID="ns1-8X-mnJ">
            <objects>
                <viewController storyboardIdentifier="IntroViewController" title="Home" useStoryboardIdentifierAsRestorationIdentifier="YES" id="aG9-em-KMe" customClass="IntroViewController" customModule="GanaanYouth" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="ip2-Ix-3hT">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="15"/>
                                <state key="normal" title="Notify">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                    </view>
                    <connections>
                        <segue destination="os0-Mz-f4C" kind="custom" identifier="Introduce" customClass="SWRevealViewControllerSeguePushController" id="feg-ho-W4K"/>
                        <segue destination="WOC-m2-VfW" kind="custom" identifier="Photo" customClass="SWRevealViewControllerSeguePushController" id="H2r-lV-s3P"/>
                        <segue destination="NMQ-7P-fSh" kind="custom" identifier="Home" customClass="SWRevealViewControllerSeguePushController" id="IPo-o8-eXo"/>
                        <segue destination="Vr5-Kh-vvr" kind="custom" identifier="Q&amp;A" customClass="SWRevealViewControllerSeguePushController" id="FWg-62-jBS"/>
...
