...
        let btnTitle = "Album"
        
        self.revealViewController()?.rearViewController.performSegue(withIdentifier: btnTitle, sender: self.revealViewController()?.rearViewController)
    }
    
    @IBAction func notifyButton(_ sender: Any) {
        let alert = UIAlertController(title: "준비중입니다", message: "", preferredStyle: .alert)
        
        alert.addAction(UIAlertAction(title: "확인", style: UIAlertAction.Style.default))
        
        self.present(alert, animated: true, completion: nil)
    }
}


...
