...
                            </textField>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oIK-Xy-Xl8">
                                <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <items>
                                    <navigationItem title="JOIN" id="S0a-zY-BhX">
                                        <barButtonItem key="leftBarButtonItem" title="cancel" id="cfP-S1-DnC">
                                            <color key="tintColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <connections>
                                                <action selector="joinCancel:" destination="WJM-B2-EAc" id="Y1p-la-ZrK"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
